RESOLVED FIXED228840
VoiceOver is not announcing the state as selected/unselected when an item is selected in a grid.
https://bugs.webkit.org/show_bug.cgi?id=228840
Summary VoiceOver is not announcing the state as selected/unselected when an item is ...
Andres Gonzalez
Reported 2021-08-05 12:43:32 PDT
VoiceOver is not announcing the state as selected/unselected when an item is selected in a grid.
Attachments
Patch (6.40 KB, patch)
2021-08-05 12:56 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2021-08-05 12:56:30 PDT
chris fleizach
Comment 2 2021-08-05 13:01:31 PDT
Comment on attachment 435015 [details] Patch looks good. this is what I was thinking was wrong too
EWS
Comment 3 2021-08-05 15:48:09 PDT
Committed r280705 (240301@main): <https://commits.webkit.org/240301@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435015 [details].
Note You need to log in before you can comment on or make changes to this bug.